Code Splitting Added API package for all non bukkit API Added Spigot package for all bukkit related API